syntax = "proto3";
import "common.proto";

message CategoryScoresRequest {
  string periodStartDate = 1;
  string periodEndDate = 2;
}

message CategoryScoresResponse {
  repeated CategoryScore categoryScores = 1;
}

message CategoryScore {
  string categoryName = 1;
  int32 numberOfRatings = 2;
}